# guru-granth-sahib-data-analysis

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
config/: config.yaml  ragas.yaml
docs/: 01-corpus.md  02-matching.md  03-features.md  04-density.md  05-cooccurrence.md  06-tagging.md  07-mixing.md  08-authors.md  08-findings.md  09-semantic.md  10-findings.md  ANALYSIS_RESULTS.md  PLAN.md  PLAN_WEBAPP.md  PROMPT_HANDOFF.md  blog-ai-ds.md  blog-aientrepreneurship.md  blog-being-harpreet.md  blog-seed.md  glossary.md  linkedin-aientrepreneurship.md  tmp-newsletter-notes.md
lexicon/: _schema.yaml  devotional.yaml  entities.yaml  ethical.yaml  identity.yaml  nirgun.yaml  perso_arabic.yaml  polysemy.yaml  sagun_narrative.yaml  sanskritic.yaml
questions/: Mapv1.md  Mapv2.md  Mapv2_additions.md  Mapv3_harpreet.md
scripts/: download_srigurugranth.py  run_full_analysis.py  run_phase0.py
src/ggs/: __init__.py  cli.py
src/ggs/analysis/: __init__.py  cooccurrence.py  cross_tradition.py  density.py  evaluation.py  features.py  match.py  scores.py  stats.py  tagger.py
src/ggs/corpus/: __init__.py  crossval.py  normalize.py  parse_srigranth.py  pipeline.py  scrape.py  tokenize.py  validate.py
src/ggs/lexicon/: __init__.py  lint.py  loader.py
src/ggs/output/: __init__.py  audit.py  bundle_manifest.py  report.py  search_index.py  web_bundle.py
src/ggs/pipeline/: __init__.py  cache.py  errors.py  manifest.py  parallel.py
tests/: conftest.py  test_bundle_manifest.py  test_cache.py  test_cooccurrence.py  test_cross_tradition.py  test_crossval.py  test_density.py  test_evaluation.py  test_features.py  test_match.py  test_normalize.py  test_parallel.py  test_parse.py  test_phase0_integration.py  test_properties.py  test_report.py  test_roundtrip.py  test_scores.py  test_search_index.py  test_stats.py  test_tagger.py  test_tokenize.py  test_web_bundle.py
tests/fixtures/expected/: normalization_cases.yaml
tests/fixtures/html/: ang_001.html  ang_002.html  ang_003.html  ang_004.html  ang_005.html
tests/fixtures/lexicon/: test_entities.yaml
